[package]
name = "aws-signature-proxy"
version = "0.1.0"
authors = ["Shaun Verch"]
edition = "2018"

[dependencies]
structopt = "0.2"
simple_proxy = { version = "1.2.1", features = ["router", "health", "cors"] }
querystring = "1.1.0"
rust-crypto = "0.2.36"
percent-encoding = "2.1.0"
hmac-sha256 = "0.1.1"
openssl = "0.10"
hex = "0.3.1"
http = "0.1.19"
hyper = "0.12.35"
chrono = "0.4.9"
rusoto_credential = "0.41.0"
futures = "0.1.29"
# See https://github.com/nlevitt/monie/pull/4
monie = { git = "https://github.com/sverch/monie", branch = "env-var-custom-cert" }

# Required for the `monie` library above.
[patch.crates-io]
"hyper" = { git = "https://github.com/sverch/hyper", branch = "0.12.35-pubpool" }
